Fix progress bar bug on iOS attempt 1

--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,7 @@ canvas:hover:active {
     transform: translate(-50%, 0);
     text-align: center;
     width: 80vw;
+    display: none;
 }
 
 /*
